--- a/Credit default Decision Tree.ipynb
+++ b/Credit default Decision Tree.ipynb
@@ -2,24 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "surgical-intranet",
    "metadata": {},
    "outputs": [
     {
      "output_type": "error",
-     "ename": "Error",
-     "evalue": "Jupyter cannot be started. Error attempting to locate jupyter: Data Science libraries notebook and jupyter are not installed in interpreter Python 3.8.2 64-bit.",
+     "ename": "ImportError",
+     "evalue": "C extension: dlopen(/Users/tajalahluwalia/Library/Python/3.8/lib/python/site-packages/pandas/_libs/interval.cpython-38-darwin.so, 2): no suitable image found.  Did find:\n\t/Users/tajalahluwalia/Library/Python/3.8/lib/python/site-packages/pandas/_libs/interval.cpython-38-darwin.so: mach-o, but wrong architecture\n\t/Users/tajalahluwalia/Library/Python/3.8/lib/python/site-packages/pandas/_libs/interval.cpython-38-darwin.so: mach-o, but wrong architecture not built. If you want to import pandas from the source directory, you may need to run 'python setup.py build_ext --force' to build the C extensions first.",
      "traceback": [
-      "Error: Jupyter cannot be started. Error attempting to locate jupyter: Data Science libraries notebook and jupyter are not installed in interpreter Python 3.8.2 64-bit.",
-      "at S.startServer (/Users/tajalahluwalia/.vscode/extensions/ms-toolsai.jupyter-2021.5.745244803/out/client/extension.js:49:382895)",
-      "at async S.createServer (/Users/tajalahluwalia/.vscode/extensions/ms-toolsai.jupyter-2021.5.745244803/out/client/extension.js:49:382190)",
-      "at async connect (/Users/tajalahluwalia/.vscode/extensions/ms-toolsai.jupyter-2021.5.745244803/out/client/extension.js:49:495725)",
-      "at async T.ensureConnectionAndNotebookImpl (/Users/tajalahluwalia/.vscode/extensions/ms-toolsai.jupyter-2021.5.745244803/out/client/extension.js:32:668241)",
-      "at async T.ensureConnectionAndNotebook (/Users/tajalahluwalia/.vscode/extensions/ms-toolsai.jupyter-2021.5.745244803/out/client/extension.js:32:666473)",
-      "at async T.clearResult (/Users/tajalahluwalia/.vscode/extensions/ms-toolsai.jupyter-2021.5.745244803/out/client/extension.js:32:662135)",
-      "at async T.reexecuteCell (/Users/tajalahluwalia/.vscode/extensions/ms-toolsai.jupyter-2021.5.745244803/out/client/extension.js:32:648400)",
-      "at async T.reexecuteCells (/Users/tajalahluwalia/.vscode/extensions/ms-toolsai.jupyter-2021.5.745244803/out/client/extension.js:32:644604)"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/pandas/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m     \u001b[0;32mfrom\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_libs\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mhashtable\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0m_hashtable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlib\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0m_lib\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtslib\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0m_tslib\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mImportError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pragma: no cover\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/pandas/_libs/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_libs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minterval\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mInterval\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m from pandas._libs.tslibs import (\n",
+      "\u001b[0;31mImportError\u001b[0m: dlopen(/Users/tajalahluwalia/Library/Python/3.8/lib/python/site-packages/pandas/_libs/interval.cpython-38-darwin.so, 2): no suitable image found.  Did find:\n\t/Users/tajalahluwalia/Library/Python/3.8/lib/python/site-packages/pandas/_libs/interval.cpython-38-darwin.so: mach-o, but wrong architecture\n\t/Users/tajalahluwalia/Library/Python/3.8/lib/python/site-packages/pandas/_libs/interval.cpython-38-darwin.so: mach-o, but wrong architecture",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-9a597d603b06>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Download the data to SageMaker instance and load the data into a dataframe.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/pandas/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0;31m# hack but overkill to use re\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0mmodule\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"cannot import name \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m     raise ImportError(\n\u001b[0m\u001b[1;32m     34\u001b[0m         \u001b[0;34mf\"C extension: {module} not built. If you want to import \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0;34m\"pandas from the source directory, you may need to run \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: C extension: dlopen(/Users/tajalahluwalia/Library/Python/3.8/lib/python/site-packages/pandas/_libs/interval.cpython-38-darwin.so, 2): no suitable image found.  Did find:\n\t/Users/tajalahluwalia/Library/Python/3.8/lib/python/site-packages/pandas/_libs/interval.cpython-38-darwin.so: mach-o, but wrong architecture\n\t/Users/tajalahluwalia/Library/Python/3.8/lib/python/site-packages/pandas/_libs/interval.cpython-38-darwin.so: mach-o, but wrong architecture not built. If you want to import pandas from the source directory, you may need to run 'python setup.py build_ext --force' to build the C extensions first."
      ]
     }
    ],
@@ -28,6 +29,7 @@
     "    \n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
     "try:\n",
     "  urllib.request.urlretrieve (\"https://github.com/PacktPublishing/Python-for-Finance-Cookbook/raw/master/Datasets/credit_card_default.csv\", \"credit_card_default.csv\")\n",
     "  print('Success: downloaded credit_card_default.csv.')\n",
@@ -2483,9 +2485,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_python3",
-   "language": "python",
-   "name": "conda_python3"
+   "name": "python382jvsc74a57bd031f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6",
+   "display_name": "Python 3.8.2 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2497,7 +2498,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.2"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
